2009-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Improved/added more coder logging
	statements.

	* magick/xwindow.c: Reflowed some code and comments.

	* magick/utility.c (SetClientName): Default client name does need
	to be "Magick", so original value is restored.

	* coders/mpc.c (ReadMPCImage): is_monochrome and is_grayscale
	flags were not managed properly for the MPC coder.

2009-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Added jpeg:block-smoothing and
	jpeg:fancy-upsampling defines to control these JPEG library
	options.

	* magick/image.c (SetImageInfo): Fix lockup due to hanging in loop
	while parsing malformed sub-image specification (SourceForge issue
	2886560).  Also fixes the ability to pass the image size via the
	filename specification like "myfile.jpg[640x480]" rather than
	needing to use -size.

	* coders/jpeg.c (ReadJPEGImage): Fix image scaling when used with
	IJG JPEG library version 7.

2009-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c: Added support for a "Threads" limit, which
	specifies how many threads may be used.  Note that if
	omp_set_nested(true) is used, GCC's GOMP seems to replicate this
	number of threads for each level of threading rather than sharing
	the specified number of threads across all teams.  For example,
	specifying four threads leads to sixteen active threads with
	omp_set_nested(true) and nested threading.  This GOMP behavior
	does not seem to cause any harm.
	(GetMagickResourceLimit): New accessor function to retrieve the
	maximum limit for a resource.

	* magick/module.c (ReadModuleConfigureFile): Default set of module
	aliases is now statically initialized.  The modules.mgk file is
	now optional and can be used to support adding more modules, or
	diverting existing format support to a user-provided module.

	* magick/magick.c (DestroyMagick): Document that this function